Set QMdiArea::DontMaximizeSubWindowOnActivation

... so that subwindows that are set to stay on top will not get
maximized when another view is maximized.

BUG: 441644